Portfolio Page Divider Fix
- Divider on portfolio page was off centre after removing the bounce
animation.

--- a/wp-content/themes/portfolio-theme/assets/css/main.css
+++ b/wp-content/themes/portfolio-theme/assets/css/main.css
@@ -1160,8 +1160,8 @@ textarea:focus {
   left: 50%;
   position: absolute;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -75%);
+          transform: translate(-50%, -75%);
 }
 
 .portfolio-options {
