--- a/wp-content/themes/portfolio-theme/assets/sass/pages/_project-page.scss
+++ b/wp-content/themes/portfolio-theme/assets/sass/pages/_project-page.scss
@@ -94,7 +94,7 @@
     left: 50%;
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -75%);
   }
 }
 
